fixed wrap problem

--- a/client/less/components/_client.less
+++ b/client/less/components/_client.less
@@ -1,11 +1,13 @@
 .client{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     margin: 50px 0;
     li{
         list-style-type: none;
+        margin: 15px;
         img{
             width: 100px;
             height: auto;
